fix: SendForm: text-overflow. fixes #133

--- a/src/containers/SendForm/SendForm.scss
+++ b/src/containers/SendForm/SendForm.scss
@@ -21,9 +21,13 @@
     flex-direction: column;
     justify-content: center;
     margin: 0 0 0 10px;
+    width: calc(100% - 70px);
 
     .name {
+      display: block;
       font-size: 16px;
+      overflow: hidden;
+      text-overflow: ellipsis;
     }
     .currency {
       font-size: 12px;
